0.20.31	UNRELEASED

0.20.30	2022-01-08

0.20.29	2022-01-08

 * Support staging submodules.
   (Jelmer Vernooĳ)

 * Drop deprecated Index.iterblobs and iter_fresh_blobs.
   (Jelmer Vernooĳ)

 * Unify clone behaviour of ``Repo.clone`` and
   ``porcelain.clone``, and add branch parameter for
   clone. (Peter Rowlands, #851)

0.20.28	2022-01-05

 * Fix hook test on Mac OSX / Linux when dulwich is
   not installed system-wide. (Jelmer Vernooĳ, #919)

 * Cope with gecos being unset.
   (Jelmer Vernooĳ, #917)

0.20.27	2022-01-04

 * Allow adding files to repository in pre-commit hook.
   (Jelmer Vernooĳ, #916)

 * Raise SubmoduleEncountered in ``tree_lookup_path``.
   (Jelmer Vernooĳ)

0.20.26	2021-10-29

 * Support os.PathLike arguments to Repo.stage().
   (Jan Wiśniewski, #907)

 * Drop support for Python 3.5.  (Jelmer Vernooĳ)

 * Add ``dulwich.porcelain._reset_file``.
   (Ded_Secer)

 * Add ``Repo.unstage``. (Ded_Secer)

0.20.25	2021-08-23

 * Fix ``dulwich`` script when installed via setup.py.
   (Dan Villiom Podlaski Christiansen)

 * Make default file mask consistent
   with Git. (Dan Villiom Podlaski Christiansen, #884)

0.20.24	2021-07-18

 * config: disregard UTF-8 BOM when reading file.
   (Dan Villiom Podlaski Christiansen)

 * Skip lines with spaces only in .gitignore. (Andrey Torsunov, #878)

 * Add a separate HTTPProxyUnauthorized exception for 407 errors.
   (Jelmer Vernooĳ, #822)

 * Split out a AbstractHTTPGitClient class.
   (Jelmer Vernooĳ)

0.20.23	2021-05-24

 * Fix installation of GPG during package publishing.
   (Ruslan Kuprieiev)

0.20.22	2021-05-24

 * Prevent removal of refs directory when the last ref is
   deleted. (Jelmer Vernooĳ)

 * Fix filename: MERGE_HEADS => MERGE_HEAD.
   (Jelmer Vernooĳ, #861)

 * For ignored directories, porcelain.add and porcelain.status now only return
   the path to directory itself in the list of ignored paths. Previously, paths
   for all files within the directory would also be included in the list.